# mud-mobile-connector

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: com.mudmobile.connector.desktop
scripts/: install-icon-linux.sh
src/: app.rs  config.rs  error.rs  frontends.rs  keychain.rs  main.rs  model.rs  mudmobile.rs  sal.rs  sge.rs  worker.rs
